# python-input-contol

./: .gitignore  README.md  install.py  pyproject.toml
packaging/pyinstaller/: entrypoint.py  python-input-control.spec
src/python_input_control/: __init__.py  cli.py  dispatch.py  errors.py  installer.py  models.py  mouse_motion.py  permissions.py  platform.py  protocol.py  randomness.py  timing.py
src/python_input_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_input_control/backends/: __init__.py  keyboard_backend.py  mouse_backend.py  pyautogui_mouse_backend.py  pynput_keyboard.py
tests/: _desktop_harness.py  test_cli.py  test_dispatch.py  test_install_script.py  test_installer.py  test_installer_allow_disallow.py  test_installer_main.py  test_installer_windows_registry.py  test_integration_desktop.py  test_mouse_motion.py  test_permissions.py  test_platform.py  test_platform_bounds.py  test_protocol.py  test_pyautogui_mouse_backend.py  test_pynput_keyboard_backend.py  test_timing.py
