[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-input-control"
version = "0.1.0"
description = "Chrome native messaging host architecture for browser-driven OS input automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Workshop" }
]
keywords = [
  "chrome-native-messaging",
  "input-automation",
  "mouse",
  "keyboard",
  "protocol"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pynput>=1.7.7"
]

[project.urls]
Homepage = "https://example.invalid/python-input-control"
Repository = "https://example.invalid/python-input-control"

[project.optional-dependencies]
backends = [
  "numpy>=1.26",
  "pyautogui>=0.9.54"
]
standalone = [
  "numpy>=1.26",
  "pyautogui>=0.9.54",
  "pyinstaller>=6.0"
]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14"
]

[project.scripts]
python-input-control = "python_input_control.cli:main"
python-input-control-install = "python_input_control.installer:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: requires a real desktop session and may emit OS-level input events",
]
